FIXED: wrong padding in homepage for small devices ;

--- a/static/styles/mdp.scss
+++ b/static/styles/mdp.scss
@@ -961,12 +961,8 @@ chatbot {
 }
 @media all and(max-width: $sm){
 
-  footer {
-    position:relative!important; bottom:0!important; height: 70px!important;
-
-  }
+  footer {position:relative!important; bottom:0!important; height: 70px!important;}
   .mobile__padding{ padding-left: 2%!important; padding-right: 2%!important; }
-
   .no-mobile {display: none!important;}
   .row--mobile { margin-left:0!important; margin-right:0!important;}
 
@@ -988,9 +984,14 @@ chatbot {
     }
   }
 
+  // Disable scrollbar
   ::-webkit-scrollbar {
     display: none;
   }
+
+  // Fix padding on homepage
+  entity-carousel {& > * {max-width: 100vw;} }
+
 
 }
 
